Updated styles for medium and bigger screens

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" href="./scss/_index.scss" />
   </head>
   <body>
-    <main>
+    <div class="bg-right"></div>
+    <div class="bg-left"></div>
+    <main class="site">
       <header>
         <div class="wrapper">
           <a href="#" class="logo">
